# random-shuffle

./: random-shuffle.cabal
src/System/Random/: Shuffle.hs
tests/: test-shuffle.hs
