cabal-version:    >= 1.8
build-type:       Simple
name:             random-shuffle
version:          0.0.2
license:          BSD3
license-file:     LICENSE
category:         System
author:           Oleg Kiselyov, Manlio Perillo
maintainer:       Andras Slemmer <0slemi0@gmail.com>
copyright:        Oleg Kiselyov 2001
                  Manlio Perillo 2009
synopsis:         Random shuffle implementation.
description:
    Random shuffle implementation, on immutable lists.
    .
    Based on /perfect shuffle/ implementation by Oleg Kiselyov,
    available on <http://okmij.org/ftp/Haskell/perfect-shuffle.txt>.
stability:        Beta

library
    build-depends:      base, random, MonadRandom
    exposed-modules:    System.Random.Shuffle
    hs-source-dirs:     src
    ghc-options:        -Wall -fwarn-tabs

test-suite test-shuffle
    type:          exitcode-stdio-1.0
    main-is:       tests/test-shuffle.hs
    build-depends: base, random, QuickCheck, random-shuffle
